# Open3D-PointNet2-Semantic3D

./: .gitmodules  HowTo.md  kitti_predict.py  model.py  output_all_features.sh  output_features.py  visualize_features.py
dataset/: kitti_dataset.py
features_util/: CMakeLists.txt  build.sh  features_util_cpp.cpp  py_wrap.py
tf_ops/: build.sh
util/: features_util.py
weights/: best_model_epoch_060.ckpt.index
